2014-04-05  Paul Eggert  <eggert@cs.ucla.edu>

	Prefer 'ARRAYELTS (x)' to 'sizeof x / sizeof *x'.
	* alloc.c (memory_full):
	* charset.c (syms_of_charset):
	* doc.c (Fsnarf_documentation):
	* emacs.c (main):
	* font.c (BUILD_STYLE_TABLE):
	* keyboard.c (make_lispy_event):
	* profiler.c (setup_cpu_timer):
	* xgselect.c (xg_select):
	* xterm.c (record_event, STORE_KEYSYM_FOR_DEBUG):
	Use ARRAYELTS.
	* font.c (FONT_PROPERTY_TABLE_SIZE): Remove.
	Replace the only use with ARRAYELTS (font_property_table).
	* xfaces.c (DIM): Remove.  All uses replaced by ARRAYELTS.

2014-04-03  Daniel Colascione  <dancol@dancol.org>

	* xterm.c (x_term_init):
	* xfns.c (best_xim_style):
	* xfaces.c (Fdump_colors):
	* w32fns.c (w32_default_color_map):
	* w32.c (init_environment, N_ENV_VARS):
	* unexcw.c (read_exe_header):
	* term.c (term_get_fkeys_1):
	* sysdep.c (init_baud_rate):
	* nsterm.m (ns_convert_key):
	* nsfns.m (get_geometry_from_preferences):
	* msdos.c (dos_set_window_size, init_environment):
	* macfont.m (mac_font_get_glyph_for_cid)
	(macfont_store_descriptor_attributes)
	(macfont_create_attributes_with_spec, mac_ctfont_get_glyph_for_cid):
	* keyboard.c (command_loop_1, read_menu_command, make_lispy_event)
	(NUM_MOD_NAMES, read_key_sequence_vs, Fcurrent_input_mode)
	(syms_of_keyboard):
	* image.c (xpm_str_to_color_key):
	* fringe.c (MAX_STANDARD_FRINGE_BITMAPS):
	* frame.c (x_set_frame_parameters):
	* fileio.c (Ffile_selinux_context):
	* emacs.c (sort_args):
	* dosfns.c (msdos_stdcolor_name):
	* dired.c (file_attributes):
	* chartab.c (uniprop_decoder_count, uniprop_encode_count):
	Change expressions of the form sizeof(arr) / sizeof(arr[0])
	to ARRAYELTS (arr).

2014-04-02  Daniel Colascione  <dancol@dancol.org>

	* data.c (Ffset): Abort if we're trying to set a function call to
	a dead lisp object.

	* lisp.h (ARRAYELTS): New macro.

	* alloc.c: Include execinfo.h if available.
	(SUSPICIOUS_OBJECT_CHECKING): New macro; define unconditionally.